kasten/kasten-generate-policy-by-preset-label/kasten-generate-policy-by-preset-label.yaml
# This example assumes that Kasten policy presets named
# "gold", "silver", and "bronze" have been pre-created
# and Kasten was deployed into the `kasten-io` namespace.
#
# Additionally, the Kyverno background controller requires
# additional permissions to create Kasten Policy resources.
# Apply the create-kasten-policies-clusterrole.yaml manifest
# first to grant the required permissions.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kasten-generate-policy-by-preset-label
  annotations:
    policies.kyverno.io/title: Generate Kasten Policy from Preset
    policies.kyverno.io/category: Veeam Kasten
    policies.kyverno.io/subject: Policy
    kyverno.io/kyverno-version: 1.12.1
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kubernetes-version: "1.24-1.30"
    policies.kyverno.io/description: >-
      Generates a Kasten policy for a new namespace that includes a valid "dataprotection" label, if the policy does not already exist.

      Use with "kasten-validate-ns-by-preset-label" policy to require "dataprotection" labeling on new namespaces.
spec:
  rules:
  - name: kasten-generate-policy-by-preset-label
    match:
      any:
      - resources:
          kinds:
            - Namespace
          selector:
            matchExpressions:
              - key: dataprotection 
                operator: In
                values: 
                - gold
                - silver
                - bronze
    context:
    - name: existingPolicy
      apiCall:
        urlPath: "/apis/config.kio.kasten.io/v1alpha1/namespaces/kasten-io/policies" # returns list of Kasten policies from kasten-io namespace
        jmesPath: "items[][[@.spec.presetRef][?name=='{{ request.object.metadata.labels.dataprotection }}'] && [@.spec.selector.matchExpressions[].values[?@=='{{ request.namespace }}']]][][][][] | length(@)" # queries if a policy based on the dataprotection label value, covering that app namespace already exists 
    preconditions:
      any:
      - key: "{{ existingPolicy }}"
        operator: Equals
        value: 0 # Only generate the policy if it does not already exist
    generate:
      apiVersion: config.kio.kasten.io/v1alpha1
      kind: Policy
      name: "{{ request.namespace }}-{{ request.object.metadata.labels.dataprotection }}-backup"
      namespace: kasten-io
      data:
        spec:
          comment: "Auto-generated by Kyverno"
          paused: false
          actions:
            - action: backup
          presetRef:
            name: "{{ request.object.metadata.labels.dataprotection }}"
            namespace: kasten-io
          selector:
            matchExpressions:
              - key: k10.kasten.io/appNamespace
                operator: In
                values:
                  - "{{ request.namespace }}"
