kasten/kasten-generate-policy-by-preset-label/.kyverno-test/test-values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: kasten-generate-policy-by-preset-label
  resources:
  - name: test-namespace
    values:
      request.namespace: test-namespace
  rules:
  - name: kasten-generate-policy-by-preset-label
    values:
      existingPolicy: 0
